# sinus

./: .clang-format  .gitmodules  CMakeLists.txt  GenerateData.hpp  ImplementationBase.hpp  NoOpLib.cpp  NoOpLib.hpp  README.md  StandardLibrary.cpp  StandardLibrary.hpp  VectorLibrary.cpp  VectorLibrary.hpp  benchmark.cpp  cmdline.cpp  main.cpp
